[package]
name = "akriti-measure"
version = "0.1.0"
authors = ["Sreejith Krishnan R <sreejith@ganita.io>"]

[dependencies]
harfbuzz-sys = { git="https://github.com/ganita/rust-harfbuzz-sys" }

[dev-dependencies]
core-foundation = "*"
freetype-sys = { git="https://github.com/ganita/rust-freetype-sys" }